--- a/src/tag12_DOM/Dom-Elements-TS-Level-1_2/style.css
+++ b/src/tag12_DOM/Dom-Elements-TS-Level-1_2/style.css
@@ -1,3 +1,13 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+    height: 100vh; 
+    margin: 0; 
+    background-color: black;
+}
+
 .style {
     display: inline-block;
     border-radius: 5px;
